tests/errors/err_undefined_gosub.bas
10 PRINT "START"
20 GOSUB 500
30 PRINT "END"
40 END
